# dynamic_navigation

./: .gitmodules  README.md
data_synchronizer/: CMakeLists.txt  package.xml
data_synchronizer/config/: params.yaml  params_gazebo.yaml  params_realsense.yaml
data_synchronizer/launch/: gazebo.launch.py
data_synchronizer/src/: data_synchronizer.cpp  yolo_dispatcher.cpp
dynamic_detector/: CMakeLists.txt  package.xml
dynamic_detector/config/: params.yaml  params_gazebo.yaml  params_realsense.yaml
dynamic_detector/include/dynamic_detector/: depth_conversions.hpp
dynamic_detector/src/: dynamic_detector.cpp  obstacles_tracker.cpp  pc2_visualizer.cpp
dynamic_nav_interfaces/: CMakeLists.txt
dynamic_nav_interfaces/srv/: GoalPose.srv
dynamic_nav_msgs/: CMakeLists.txt  package.xml
dynamic_nav_msgs/msg/: DetectorData.msg  DynamicLayerMsg.msg
dynamic_navigation/: CMakeLists.txt  package.xml
dynamic_navigation/config/: behavior_tree.xml  dynamic_controller_params_gazebo.yaml  dynamic_controller_params_realsense.yaml  nav2_params_gazebo.yaml  nav2_params_realsense.yaml
dynamic_navigation/launch/: dynamic_controller_gazebo.launch.py  dynamic_controller_realsense.launch.py  dynamic_navigation.launch.py  lidar.launch.py  nav2_bringup.launch.py  nav2_bringup_gazebo.launch.py  nav2_bringup_realsense.launch.py  realsense.launch.py  rtabmap.launch.py  rtabmap_gazebo.launch.py  rtabmap_gazebo_localization.launch.py  rtabmap_realsense.launch.py  rtabmap_realsense_localization.launch.py  rtabmap_realsense_mapping.launch.py  rtabmap_tum.launch.py  rtabmap_viz.launch.py  rtabmap_viz_realsense_mapping.launch.py  sensors.launch.py
dynamic_navigation/scripts/: record_realsense.sh
dynamic_navigation/src/: dynamic_controller.cpp
motion_detector/: package.xml  setup.py
motion_detector/config/: params.yaml
motion_detector/launch/: fake_fast_detector.launch.py  motion_detector.launch.py
motion_detector/motion_detector/: fake_fast_detector.py  keypoints_visualizer.py  motion_detector.py
motion_detector/motion_detector/submodules/: yolo.py
nav2_dynamic_costmap_plugin/: CMakeLists.txt  dynamic_layer.xml  package.xml
nav2_dynamic_costmap_plugin/include/nav2_dynamic_costmap_plugin/: dynamic_layer.hpp
nav2_dynamic_costmap_plugin/src/: dynamic_layer.cpp
tum_converter/: .gitignore  package.xml  setup.cfg  setup.py
tum_converter/data/: README.md
tum_converter/tum_converter/: evaluate_ate.py  map.py  tum_converter.py
yolo/: package.xml  setup.py
yolo/yolo/: fake_fast_detector.py  motion_detector.py  yolo_ros.py
yolo/yolo/submodules/: yolo.py
