<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dynamic_navigation</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="artem-kondratev5@gmail.com">artem-kondratew</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>data_synchronizer</depend>
  <depend>dynamic_detector</depend>
  <depend>dynamic_nav_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>motion_detector</depend>
  <depend>nav2_dynamic_costmap_plugin</depend>
  <depend>nav2_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rtabmap</depend>
  <depend>rtabmap_ros</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
