<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tum_converter</name>
  <version>0.0.0</version>
  <description>Package for convrting TUM datasets from ROS1 to ROS2</description>
  <maintainer email="artemkondratev5@gmail.com">artem-kondratew</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>cv_bridge</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
